--- a/index.html
+++ b/index.html
@@ -15,28 +15,48 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 
+    <!-- Adding bootstrap icons plugin -->
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+
 </head>
 <body>
 
   <!-- Header -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
+      <!-- <div class="col-3"> 
         <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
+      </div> -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
+            <div class="row"> 
+              <div class="col-3 ps-5"> 
+                  <li class="nav-item ps-5">
+                      <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
+                  </li>
+              </div>
+               <div class="col-3 ps-5"> 
+                 <li class="nav-item ps-5">
                     <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="assets/img/phone.svg" alt="">+79979901881</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
-                </li>
+                 </li>
+               </div>
+              <div class="col-3 ps-5"> 
+                  <li class="nav-item mt-3  ps-2 navbarphonenumber">
+                      <a class="nav-link" href="#"><img src="assets/img/phone.svg" alt="">+79979901881</a>
+                  </li>
+              </div>
+              <div class="col-3 ps-5  mt-2 navbarappoinment"> 
+                  <li class="nav-item ps-5">
+                      <a class="nav-link" href="#"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
+                  </li>
+              </div>
+            </div>
             </ul>
         </div>
     </div>
@@ -120,7 +140,7 @@
                           <div class="card-body ourservicesfirstcard">
                               <img src="assets/img/card1.png" alt="">
                               <h5 class="card-title">Aesthetic Gynecology</h5>
-                              <p class="card-text">Our clinic specializes in aesthetic gynecology treatments to improve intimate Well-being. Whether you Want Vaginal rejuvenation, labiaplasty, or anthoer cosmetic procedure, our experts  are here to help.</p>
+                              <p class="card-text pb-2">Our clinic specializes in aesthetic gynecology treatments to improve intimate Well-being. Whether you Want Vaginal rejuvenation, labiaplasty, or anthoer cosmetic procedure, our experts  are here to help.</p>
                               <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                           </div>
                       </div>
@@ -131,7 +151,7 @@
                           <div class="card-body ourservicessecondcard">
                              <img src="assets/img/card3.png" alt="">
                               <h5 class="card-title">Experienced Team </h5>
-                              <p class="card-text pb-5">Our highly trained and compassionate team of gynecologists and plastic surgeons have years of experience providing safe and effective procedures.</p>
+                              <p class="card-text pb-4">Our highly trained and compassionate team of gynecologists and plastic surgeons have years of experience providing safe and effective procedures.</p>
                               <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                           </div>
                       </div>
@@ -142,7 +162,7 @@
                             <div class="card-body ourservicesthirdcard">
                                   <img src="assets/img/card2.png" alt="">
                                   <h5 class="card-title">State-of-the-art-Technology</h5>
-                                  <p class="card-text pb-5">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
+                                  <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
                                   <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                             </div>
                       </div>
@@ -249,31 +269,42 @@
 
   <!--  FOOTER -->
   <section>
-    <div class="container-fluid bg-primary">
+    <div class="container-fluid" id="footer">
       <div class="container">
           <div class="row">
            <!--  FIRSTBLOCK -->
-            <div class="col-5">
-              <img src="assets/img/Group 5 (1).png" alt="">
-              <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
+            <div class="col-5 footer">
+                <img src="assets/img/Group 5 (1).png" alt="">
+                <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
+                <div class="row"> 
+                  <div class="col-1">
+                    <i class="bi bi-facebook"></i>
+                  </div>
+                  <div class="col-1">
+                    <i class="bi bi-youtube"></i>
+                  </div>
+                  <div class="col-1">
+                    <i class="bi bi-instagram"></i>
+                  </div>
+                </div>
             </div>
             <!--  FIRST BLOCK -->
-            <div class="col-2">
-                <h5>QUICK LINKS</h5>
+            <div class="col-2 footerfirstblock">
+                <h5 class="pb-3">QUICK LINKS</h5>
                 <h6>Home</h6>
                 <h6>Department</h6>
                 <h6>About</h6>
                 <h6>Contanct</h6>
             </div>
             <!--  SECOND BLOCK -->
-            <div class="col-3">
-              <h5>HEAD OFFICE</h5>
+            <div class="col-3 footersecondblock">
+              <h5 class="pb-3">HEAD OFFICE</h5>
               <h6>98 West 21th </h6>
               <h6>street,Kakinada</h6>
             </div>
             <!--  THIRD BLOCK -->
-            <div class="col-2">
-              <h5>OPEN</h5>
+            <div class="col-2 footerthirdblock">
+              <h5 class="pb-3">OPEN</h5>
               <h6>Mon-Fri 8AM-8PM</h6>
               <h6>Sat 8AM-8PM</h6>
               <h6>Sun 8AM-8PM</h6>
@@ -283,11 +314,6 @@
     </div>
   </section>
   <!--  ENDING  FOOTER -->
-
-
-
-
-
 
 </body>
 </html>
