adding svg icons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <!-- Header -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
       <!-- <div class="col-3"> 
         <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
@@ -253,16 +253,49 @@
 
   <!--  FOUNDERS -->
   <section>
-    <div class="container">
-       <div class="col-4">
-         
-       </div>
-       <div class="col-4">
-
-       </div>
-       <div class="col-4">
-
-       </div>
+    <div class="container founders p-3 mb-5 rounded">
+        <div class="row"> 
+            <!--  FOUNDERS FIRST PART -->
+            <div class="col-3 row">
+                  <div class="col-3">
+                    <img src="assets/img/Group.svg" alt="">
+                  </div>
+                  <div class="col-9">
+                    <h1>22</h1>
+                  <h6>Founders</h6>
+                  </div>
+            </div>
+            <!--  FOUNDERS SECOND PART -->
+            <div class="col-3 row">
+              <div class="col-3">
+                <img src="assets/img/Group (1).svg" alt="">
+              </div>
+              <div class="col-9">
+                <h1>567+</h1>
+                <h6>Happy Patients</h6>
+              </div>
+            </div>
+            <!--  FOUNDERS THIRD PART -->
+            <div class="col-3 row">
+              <div class="col-3">
+                <img src="assets/img/Group (2).svg" alt="">
+              </div>
+              <div class="col-9">
+                <h1>48</h1>
+                <h6>Number of staffs</h6>
+              </div>
+            </div>
+            <!--  FOUNDERS FOURTH  PART -->
+            <div class="col-3 row">
+              <div class="col-3">
+                <img src="assets/img/Group (3).svg" alt="">
+              </div>
+              <div class="col-9">
+                <h1>26</h1>
+                <h6>Award Winning</h6>
+              </div>
+        </div>
+        </div>
     </div>
   </section>
   <!-- ENDING FOUNDERS -->
