--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 <body>
 
   <!-- Header -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
         <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
