--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
+    <!-- Adding bootstrap caursel cards sliders  plugin -->
+   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
 
     <!-- Adding bootstrap icons plugin -->
 
@@ -69,7 +73,7 @@
       <div class="container-fluid  fulfilinglove">
           <div class="container"> 
               <div class="row"> 
-                      <div class="col-6 pt-5"> 
+                      <div class="col-lg-6 pt-5"> 
                           <h1>Fulfiling Love,Rekindling  </h1>
                           <h1>Connection :"Welcome to  </h1>    
                           <h1> Our Couples Clinic"</h1>
@@ -78,7 +82,7 @@
                           <br>
                           <button type="button" class="btn btn-outline-primary">Primary</button>
                       </div>
-                      <div class="col-6">
+                      <div class="col-lg-6">
                           <img src="assets/img/image1.png" alt="">
                       </div>
               </div>
@@ -112,10 +116,10 @@
   <section class="mt-5 ms-5 me-5">
         <div class="container areyoulooking">
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6">
                     <img src="assets/img/image2.png" alt="">
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6">
                     <h1 class="mb-3">Are you looking for the <br>
                       Best Cometic Gynecology Hospital in Kakinada ?</h1>
                     <h6 class="pe-5">Your search ends with Aurna Hospital Couples Clinic. Our goal is to increase your self-confidence and well-being through our specialized cosmetic gynecology services.</h6>
@@ -128,55 +132,170 @@
   </section>
   <!--  ENDING ARE YOU LOOKING  -->
 
+
+
+
+    <!-- OUR SERVICES -->
+    <div class="container-fluid ourservices">
+      <h1 class="text-center">Our services</h1>
+      <h6 class="text-center mb-5">We provide specialized cosmetic gynecology services.</h6>
+
+    <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+          <div class="carousel-item active">
+              <div class="card-wrapper container-sm d-flex  justify-content-around">
+                  <!--  FIRST CARD -->
+                  <div class="card" style="width: 18rem;">
+                      <div class="card-body ourservicesfirstcard">
+                          <img src="assets/img/card1.png" alt="">
+                          <h5 class="card-title">Aesthetic Gynecology</h5>
+                          <p class="card-text pb-2">Our clinic specializes in aesthetic gynecology treatments to improve intimate Well-being. Whether you Want Vaginal rejuvenation, labiaplasty, or anthoer cosmetic procedure, our experts  are here to help.</p>
+                          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                      </div>
+                 </div>
+                  <!--  SECOND CARD -->
+                 <div class="col-4">
+                  <div class="card" style="width: 18rem;">
+                      <div class="card-body ourservicessecondcard">
+                         <img src="assets/img/card3.png" alt="">
+                          <h5 class="card-title">Experienced Team </h5>
+                          <p class="card-text pb-4">Our highly trained and compassionate team of gynecologists and plastic surgeons have years of experience providing safe and effective procedures.</p>
+                          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                      </div>
+                  </div>
+                </div>
+                  <!--  THIRD  CARD -->
+                <div class="card" style="width: 18rem;">
+                  <div class="card-body ourservicesthirdcard">
+                        <img src="assets/img/card2.png" alt="">
+                        <h5 class="card-title">State-of-the-art-Technology</h5>
+                        <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
+                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  </div>
+            </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <div class="card-wrapper container-sm d-flex   justify-content-around">
+                  <!--  FOURTH  CARD -->
+                    <div class="card" style="width: 18rem;">
+                      <div class="card-body ourservicesthirdcard">
+                            <img src="assets/img/card2.png" alt="">
+                            <h5 class="card-title">State-of-the-art-Technology</h5>
+                            <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                      </div>
+                </div>
+                  <!--  FOURTH  CARD -->
+                    <div class="card" style="width: 18rem;">
+                      <div class="card-body ourservicesthirdcard">
+                            <img src="assets/img/card2.png" alt="">
+                            <h5 class="card-title">State-of-the-art-Technology</h5>
+                            <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                      </div>
+                </div>
+                  <!--  FOURTH  CARD -->
+                    <div class="card" style="width: 18rem;">
+                      <div class="card-body ourservicesthirdcard">
+                            <img src="assets/img/card2.png" alt="">
+                            <h5 class="card-title">State-of-the-art-Technology</h5>
+                            <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                      </div>
+                </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <div class="card-wrapper container-sm d-flex  justify-content-around">
+                    <!--  FOURTH  CARD --> 
+
+                    <div class="card" style="width: 18rem;">
+                      <div class="card-body ourservicesthirdcard">
+                            <img src="assets/img/card2.png" alt="">
+                            <h5 class="card-title">State-of-the-art-Technology</h5>
+                            <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                      </div>
+                </div>
+                  <!--  FOURTH  CARD -->
+                    <div class="card" style="width: 18rem;">
+                      <div class="card-body ourservicesthirdcard">
+                            <img src="assets/img/card2.png" alt="">
+                            <h5 class="card-title">State-of-the-art-Technology</h5>
+                            <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                      </div>
+                    </div>
+                  <!--  FOURTH  CARD -->
+                    <div class="card" style="width: 18rem;">
+                      <div class="card-body ourservicesthirdcard">
+                            <img src="assets/img/card2.png" alt="">
+                            <h5 class="card-title">State-of-the-art-Technology</h5>
+                            <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                      </div>
+                </div>
+              </div>
+          </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+      </button>
+  </div>
+</div>
+
+  <!-- ENDING  OUR SERVICES -->
+
+  
   <!-- OUR SERVICES -->
-  <section>
+  <!-- <section>
         <div class="container ourservices">
           <h1 class="text-center">Our services</h1>
           <h6 class="text-center mb-5">We provide specialized cosmetic gynecology services.</h6>
           <div class="row">
-                <!--  FIRST CARD -->
                 <div class="col-4">
                       <div class="card" style="width: 18rem;">
                           <div class="card-body ourservicesfirstcard">
                               <img src="assets/img/card1.png" alt="">
                               <h5 class="card-title">Aesthetic Gynecology</h5>
                               <p class="card-text pb-2">Our clinic specializes in aesthetic gynecology treatments to improve intimate Well-being. Whether you Want Vaginal rejuvenation, labiaplasty, or anthoer cosmetic procedure, our experts  are here to help.</p>
-                              <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                           </div>
                       </div>
                 </div>
-                <!--  SECOND CARD --> 
                 <div class="col-4">
                       <div class="card" style="width: 18rem;">
                           <div class="card-body ourservicessecondcard">
                              <img src="assets/img/card3.png" alt="">
                               <h5 class="card-title">Experienced Team </h5>
                               <p class="card-text pb-4">Our highly trained and compassionate team of gynecologists and plastic surgeons have years of experience providing safe and effective procedures.</p>
-                              <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                           </div>
                       </div>
                 </div>
-                <!--  THIRD CARD -->
                 <div class="col-4">
                       <div class="card" style="width: 18rem;">
                             <div class="card-body ourservicesthirdcard">
                                   <img src="assets/img/card2.png" alt="">
                                   <h5 class="card-title">State-of-the-art-Technology</h5>
                                   <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
-                                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                             </div>
                       </div>
                 </div>
           </div>
         </div>
-  </section>
+  </section> -->
   <!-- ENDING  OUR SERVICES -->
 
   <!-- WHY CHOOSE -->
   <section class="mt-5 ms-5 me-5">
         <div class="container areyoulooking">
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6">
                     <h1 class="mb-3">Why choose <br>
                      Aurna Couples Clinic?</h1>
                     <h6 class="pe-5">As a leading cosmetic gynecology hospital in kakinada, We offer a range of state-of-the-art treatments to make you look and feel your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </h6>
@@ -184,7 +303,7 @@
                     <br>
                     <a href="#" class="btn btn-primary">learn more</a>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6">
                     <img src="assets/img/image3.png" alt="">
                 </div>
             </div>
@@ -197,10 +316,10 @@
     <div class="container-fluid Vaginalrejuvenation p-5">
         <div class="container">
             <div class="row">
-               <div class="col-6">
+               <div class="col-lg-6 col-sm-12 col-md-12">
                   
                </div>
-               <div class="col-6">
+               <div class="col-lg-6 col-sm-12 col-md-12">
                       <h1>Vaginal Rejuvenation</h1>
                       <h6>Boost Your confidence and well-being.</h6>
                       <h6>At Aruna Hospital Couples Clinics, we offer vaginal rejuvenation<br>
@@ -225,7 +344,7 @@
         <div class="container-fluid  ourservices">
            <div class="container">
              <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6 col-sm-12 col-md-12">
                   <h1>Our Doctors</h1>
                   <h6>Our Doctors of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </h6>
                   <h6>Our experienced team offers individual support in a discreet and pleasent  atmosphere </h6>
@@ -233,7 +352,7 @@
                  <br>
                  <a href="#" class="btn btn-primary">Join Us</a>
                 </div>
-                <div class="col-6 row">
+                <div class="col-lg-6 col-sm-12 col-md-12 row ">
                     <div class="col-4">
                       <img src="assets/img/doctor1.png" alt="">
                     </div>
@@ -266,7 +385,7 @@
                   </div>
             </div>
             <!--  FOUNDERS SECOND PART -->
-            <div class="col-3 row">
+            <div class="col-lg-3  row">
               <div class="col-3">
                 <img src="assets/img/Group (1).svg" alt="">
               </div>
@@ -347,6 +466,11 @@
     </div>
   </section>
   <!--  ENDING  FOOTER -->
+
+
+  
+  <!-- javascripit scripit plugins -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </body>
 </html>
