modifications in index

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="container-fluid  fulfilinglove">
           <div class="container"> 
               <div class="row"> 
-                      <div class="col-lg-6 pt-5"> 
+                      <div class="col-lg-6 col-sm-12 col-md-12 pt-5"> 
                           <h1>Fulfiling Love,Rekindling  </h1>
                           <h1>Connection :"Welcome to  </h1>    
                           <h1> Our Couples Clinic"</h1>
@@ -82,7 +82,7 @@
                           <br>
                           <button type="button" class="btn btn-outline-primary">Primary</button>
                       </div>
-                      <div class="col-lg-6">
+                      <div class="col-lg-6 col-sm-12 col-md-12">
                           <img src="assets/img/image1.png" alt="">
                       </div>
               </div>
@@ -116,10 +116,10 @@
   <section class="mt-5 ms-5 me-5">
         <div class="container areyoulooking">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-sm-12 col-md-12">
                     <img src="assets/img/image2.png" alt="">
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-sm-12 col-md-12">
                     <h1 class="mb-3">Are you looking for the <br>
                       Best Cometic Gynecology Hospital in Kakinada ?</h1>
                     <h6 class="pe-5">Your search ends with Aurna Hospital Couples Clinic. Our goal is to increase your self-confidence and well-being through our specialized cosmetic gynecology services.</h6>
@@ -209,7 +209,6 @@
           <div class="carousel-item">
               <div class="card-wrapper container-sm d-flex  justify-content-around">
                     <!--  FOURTH  CARD --> 
-
                     <div class="card" style="width: 18rem;">
                       <div class="card-body ourservicesthirdcard">
                             <img src="assets/img/card2.png" alt="">
@@ -295,7 +294,7 @@
   <section class="mt-5 ms-5 me-5">
         <div class="container areyoulooking">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-sm-12 col-md-12">
                     <h1 class="mb-3">Why choose <br>
                      Aurna Couples Clinic?</h1>
                     <h6 class="pe-5">As a leading cosmetic gynecology hospital in kakinada, We offer a range of state-of-the-art treatments to make you look and feel your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </h6>
@@ -303,7 +302,7 @@
                     <br>
                     <a href="#" class="btn btn-primary">learn more</a>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-sm-12 col-md-12">
                     <img src="assets/img/image3.png" alt="">
                 </div>
             </div>
@@ -342,30 +341,28 @@
   <!--  OUR DOCTORS -->
   <section>
         <div class="container-fluid  ourservices">
-           <div class="container">
-             <div class="row">
-                <div class="col-lg-6 col-sm-12 col-md-12">
-                  <h1>Our Doctors</h1>
-                  <h6>Our Doctors of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </h6>
-                  <h6>Our experienced team offers individual support in a discreet and pleasent  atmosphere </h6>
-                 <br>
-                 <br>
-                 <a href="#" class="btn btn-primary">Join Us</a>
+            <div class="container">
+                <div class="row">
+                      <div class="col-lg-6 col-sm-12 col-md-12">
+                          <h1>Our Doctors</h1>
+                          <h6>Our Doctors of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </h6>
+                          <h6>Our experienced team offers individual support in a discreet and pleasent  atmosphere </h6>
+                          <br><br>
+                          <a href="#" class="btn btn-primary">Join Us</a>
+                      </div>
+                      <div class="col-lg-6 col-sm-12 col-md-12 row ">
+                          <div class="col-lg-4 col-sm-6 col-md-6">
+                               <img src="assets/img/doctor1.png" alt="doctorimage1">
+                          </div>
+                          <div class="col-lg-4 col-sm-6 col-md-6">
+                               <img src="assets/img/doctor2.png" alt="doctorimage2">
+                          </div>
+                          <div class="col-lg-4 col-sm-6 col-md-6">
+                               <img src="assets/img/doctor3.png" alt="doctorimage3">
+                          </div>
+                      </div>
                 </div>
-                <div class="col-lg-6 col-sm-12 col-md-12 row ">
-                    <div class="col-4">
-                      <img src="assets/img/doctor1.png" alt="">
-                    </div>
-                    <div class="col-4">
-                      <img src="assets/img/doctor2.png" alt="">
-                    </div>
-                    <div class="col-4">
-                      <img src="assets/img/doctor3.png" alt="">
-                    </div>
-
-                </div>
-             </div>
-           </div>
+            </div>
         </div>
   </section>
   <!-- ENDING   OUR DOCTORS -->
@@ -425,7 +422,7 @@
       <div class="container">
           <div class="row">
            <!--  FIRSTBLOCK -->
-            <div class="col-5 footer">
+            <div class="col-5  footer">
                 <img src="assets/img/Group 5 (1).png" alt="">
                 <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
                 <div class="row"> 
