--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                           <button type="button" class="btn btn-outline-primary">Primary</button>
                       </div>
                       <div class="col-lg-6 col-sm-12 col-md-12">
-                          <img src="assets/img/image1.png" alt="">
+                          <img src="assets/img/image1.png" alt="" height="auto" width="auto">
                       </div>
               </div>
           </div>
@@ -132,10 +132,7 @@
   </section>
   <!--  ENDING ARE YOU LOOKING  -->
 
-
-
-
-    <!-- OUR SERVICES -->
+  <!-- OUR SERVICES -->
     <div class="container-fluid ourservices">
       <h1 class="text-center">Our services</h1>
       <h6 class="text-center mb-5">We provide specialized cosmetic gynecology services.</h6>
