--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <!-- Header -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
-      <!-- <div class="col-3"> 
+      <div class="col-3"> 
         <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-      </div> -->
+      </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,22 +40,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
             <div class="row"> 
-              <div class="col-3 ps-5"> 
+              <!-- <div class="col-3 ps-5"> 
                   <li class="nav-item ps-5">
                       <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
                   </li>
-              </div>
+              </div> -->
                <div class="col-3 ps-5"> 
                  <li class="nav-item ps-5">
                     <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
                  </li>
                </div>
-              <div class="col-3 ps-5"> 
-                  <li class="nav-item mt-3  ps-2 navbarphonenumber">
-                      <a class="nav-link" href="#"><img src="assets/img/phone.svg" alt="">+79979901881</a>
+              <div class="col-3 ms-5"> 
+                  <li class="nav-item mt-3  navbarphonenumber">
+                    <div class="row"> 
+                        <div class="col-3"> 
+                          <a class="nav-link" href="#"><img src="assets/img/phone.svg" alt=""> </a>
+                        </div>
+                        <div class="col-9 mt-2">
+                          <h5>+79979901881</h5>
+                        </div>
+                    </div>
                   </li>
               </div>
-              <div class="col-3 ps-5  mt-2 navbarappoinment"> 
+              <div class="col-3 ms-5  mt-2 navbarappoinment"> 
                   <li class="nav-item ps-5">
                       <a class="nav-link" href="#"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
                   </li>
@@ -80,9 +87,9 @@
                           <br>
                           <h6>Reignite Passion, Strengthen Bonds, and Experience Relationship Bliss with Our Tailored Couple-centric Solutions"</h6>
                           <br>
-                          <button type="button" class="btn btn-outline-primary">Primary</button>
+                          <button type="button" class="btn btn-outline-primary">Learn more</button>
                       </div>
-                      <div class="col-lg-6 col-sm-12 col-md-12">
+                      <div class="col-lg-6 col-sm-6 col-md-12">
                           <img src="assets/img/image1.png" alt="" height="auto" width="auto">
                       </div>
               </div>
@@ -132,7 +139,7 @@
   </section>
   <!--  ENDING ARE YOU LOOKING  -->
 
-  <!-- OUR SERVICES -->
+    <!-- OUR SERVICES -->
     <div class="container-fluid ourservices">
       <h1 class="text-center">Our services</h1>
       <h6 class="text-center mb-5">We provide specialized cosmetic gynecology services.</h6>
@@ -369,7 +376,7 @@
     <div class="container founders p-3 mb-5 rounded">
         <div class="row"> 
             <!--  FOUNDERS FIRST PART -->
-            <div class="col-3 row">
+            <div class="col-lg-3 row">
                   <div class="col-3">
                     <img src="assets/img/Group.svg" alt="">
                   </div>
@@ -389,7 +396,7 @@
               </div>
             </div>
             <!--  FOUNDERS THIRD PART -->
-            <div class="col-3 row">
+            <div class="col-lg-3 row">
               <div class="col-3">
                 <img src="assets/img/Group (2).svg" alt="">
               </div>
@@ -399,7 +406,7 @@
               </div>
             </div>
             <!--  FOUNDERS FOURTH  PART -->
-            <div class="col-3 row">
+            <div class="col-lg-3 row">
               <div class="col-3">
                 <img src="assets/img/Group (3).svg" alt="">
               </div>
@@ -419,7 +426,7 @@
       <div class="container">
           <div class="row">
            <!--  FIRSTBLOCK -->
-            <div class="col-5  footer">
+            <div class="col-lg-5  col-sm-6 footer">
                 <img src="assets/img/Group 5 (1).png" alt="">
                 <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
                 <div class="row"> 
@@ -435,7 +442,7 @@
                 </div>
             </div>
             <!--  FIRST BLOCK -->
-            <div class="col-2 footerfirstblock">
+            <div class="col-lg-2  col-sm-6 footerfirstblock">
                 <h5 class="pb-3">QUICK LINKS</h5>
                 <h6>Home</h6>
                 <h6>Department</h6>
@@ -443,13 +450,13 @@
                 <h6>Contanct</h6>
             </div>
             <!--  SECOND BLOCK -->
-            <div class="col-3 footersecondblock">
+            <div class="col-lg-3  col-sm-6  footersecondblock">
               <h5 class="pb-3">HEAD OFFICE</h5>
               <h6>98 West 21th </h6>
               <h6>street,Kakinada</h6>
             </div>
             <!--  THIRD BLOCK -->
-            <div class="col-2 footerthirdblock">
+            <div class="col-lg-2  col-sm-6  footerthirdblock">
               <h5 class="pb-3">OPEN</h5>
               <h6>Mon-Fri 8AM-8PM</h6>
               <h6>Sat 8AM-8PM</h6>
