--- a/appoinment.html
+++ b/appoinment.html
@@ -4,8 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appoinment</title>
+      <!-- Adding Style Sheet -->
+
+      <link rel="stylesheet" href="assets/style.css">
+
+      <!-- Adding bootstrap plugin -->
+  
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  
+      <!-- Adding bootstrap caursel cards sliders  plugin -->
+     
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  
+  
+      <!-- Adding bootstrap icons plugin -->
+  
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
-    
+    <!-- MAIN SECTION -->
+
+    <section>
+        <div class="container">
+            <div class="row"> 
+                <div class="col-6 mt-5 ps-5">
+                     <img src="assets/img/appoinment.png" alt="" height="auto" width="auto">
+                </div>
+                <div class="col-6">
+                    <h1 class="mt-5">Make An Appoinment</h1>
+                    <br>
+                    <form id="appoinmentfrom">
+                        <input type="text" placeholder="Your Name" required>
+                        <br>
+                        <input type="text" placeholder="Your Email" required>
+                        <br>
+                        <select id="appoinmentfromselect" name="gender" required>
+                            <option value="" disabled selected>Select your option</option>
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                            <option value="other">Other</option>
+                        </select>
+                        <br>
+                        <input type="text" placeholder="Appoinment Date" required>
+                        <br>
+                        <input type="text" placeholder="write Your Message" required>
+                        <br>
+                        <!-- <input type="submit"  id="submit" value="SUBMIT FORM"> -->
+                        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ENDING  MAIN SECTION -->
 </body>
 </html>
