--- a/index.html
+++ b/index.html
@@ -98,24 +98,24 @@
   </section>
 
   <!-- NAVBAR PART -->
-
   <section> 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Pricing</a>
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </div>
-            </div>
-          </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-primary t  navbar-fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand text-light" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>   
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link text-light" href="index.html">Department</a>
+          <a class="nav-link text-light" href="index.html">Services</a>
+          <a class="nav-link text-light" href="about.html">About</a>
+          <a class="nav-link text-light" href="contact.html">Contact</a>
+        </div>
+      </div>
+    </div>
+  </nav>
   </section>
   <!--  ENDING NAVBAR PART -->
 
@@ -376,7 +376,7 @@
     <div class="container founders p-3 mb-5 rounded">
         <div class="row"> 
             <!--  FOUNDERS FIRST PART -->
-            <div class="col-lg-3 row">
+            <div class="col-lg-3  col-sm-6 col-md-6 row">
                   <div class="col-3">
                     <img src="assets/img/Group.svg" alt="">
                   </div>
@@ -386,7 +386,7 @@
                   </div>
             </div>
             <!--  FOUNDERS SECOND PART -->
-            <div class="col-lg-3  row">
+            <div class="col-lg-3  col-sm-6 col-md-6 row">
               <div class="col-3">
                 <img src="assets/img/Group (1).svg" alt="">
               </div>
@@ -396,7 +396,7 @@
               </div>
             </div>
             <!--  FOUNDERS THIRD PART -->
-            <div class="col-lg-3 row">
+            <div class="col-lg-3  col-sm-6 col-md-6 row">
               <div class="col-3">
                 <img src="assets/img/Group (2).svg" alt="">
               </div>
@@ -406,7 +406,7 @@
               </div>
             </div>
             <!--  FOUNDERS FOURTH  PART -->
-            <div class="col-lg-3 row">
+            <div class="col-lg-3 col-sm-6 col-md-6 row">
               <div class="col-3">
                 <img src="assets/img/Group (3).svg" alt="">
               </div>
@@ -468,8 +468,6 @@
   </section>
   <!--  ENDING  FOOTER -->
 
-
-  
   <!-- javascripit scripit plugins -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
