--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse   navbar-collapse justify-content-center ml-auto"" id="navbarNav">
             <ul class="navbar-nav">
             <div class="row"> 
               <!-- <div class="col-3 ps-5"> 
@@ -45,15 +45,15 @@
                       <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
                   </li>
               </div> -->
-               <div class="col-3 ps-5"> 
-                 <li class="nav-item ps-5">
+               <div class="col-3 ps-5 me-5"> 
+                 <li class="nav-item ps-5 me-5">
                     <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
                  </li>
                </div>
               <div class="col-3 ms-5"> 
                   <li class="nav-item mt-3  navbarphonenumber">
                     <div class="row"> 
-                        <div class="col-3"> 
+                        <div class="col-3 ps-2"> 
                           <a class="nav-link" href="#"><img src="assets/img/phone.svg" alt=""> </a>
                         </div>
                         <div class="col-9 mt-2">
@@ -76,46 +76,70 @@
 <!-- Ending  Header -->
 
 <!-- FULFILING LOVE -->
-  <section class="md-5"> 
-      <div class="container-fluid  fulfilinglove">
-          <div class="container"> 
-              <div class="row"> 
-                      <div class="col-lg-6 col-sm-12 col-md-12 pt-5"> 
-                          <h1>Fulfiling Love,Rekindling  </h1>
-                          <h1>Connection :"Welcome to  </h1>    
-                          <h1> Our Couples Clinic"</h1>
-                          <br>
-                          <h6>Reignite Passion, Strengthen Bonds, and Experience Relationship Bliss with Our Tailored Couple-centric Solutions"</h6>
-                          <br>
-                          <button type="button" class="btn btn-outline-primary">Learn more</button>
-                      </div>
-                      <div class="col-lg-6 col-sm-6 col-md-12">
-                          <img src="assets/img/image1.png" alt="" height="auto" width="auto">
-                      </div>
+  <section class="md-5 d-flex"> 
+    <div class="container">
+       <div class="row"> 
+         <div class="col-1">
+            <div class="col-3 mt-5"> 
+            <img src="assets/img/facebook.png" alt="">
+            </div>
+            <div class="col-3 mt-5"> 
+            <img src="assets/img/linked.png" alt="">
+            </div>
+            <div class="col-3  mt-5"> 
+            <img src="assets/img/twitter.png" alt="">
+            </div>
+            <div class="col-3  mt-5"> 
+              <img src="assets/img/pinterest.png" alt="">
+            </div>
+            <div class="col-3  mt-5"> 
+            <img src="assets/img/gmail.png" alt="">
+            </div> 
+         </div>
+      <div class="col-11"> 
+        <div class="container-fluid  fulfilinglove">
+              <div class="container"> 
+                    <div class="row"> 
+                            <div class="col-lg-6 col-sm-12 col-md-12 pt-5"> 
+                                <h1>Fulfiling Love,Rekindling  </h1>
+                                <h1>Connection :"Welcome to  </h1>    
+                                <h1> Our Couples Clinic"</h1>
+                                <br>
+                                <h6>Reignite Passion, Strengthen Bonds, and Experience Relationship Bliss with Our Tailored Couple-centric Solutions"</h6>
+                                <br>
+                                <button type="button" class="btn btn-outline-primary">Learn more</button>
+                            </div>
+                            <div class="col-lg-6 col-sm-6 col-md-12">
+                                <img src="assets/img/image1.png" alt="" height="auto" width="auto">
+                            </div>
+                    </div>
               </div>
           </div>
       </div>
+      </div>
+    </div>
+  </div> 
   </section>
 
   <!-- NAVBAR PART -->
   <section> 
-  <nav class="navbar navbar-expand-lg navbar-light bg-primary t  navbar-fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand text-light" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>   
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link text-light" href="index.html">Department</a>
-          <a class="nav-link text-light" href="index.html">Services</a>
-          <a class="nav-link text-light" href="about.html">About</a>
-          <a class="nav-link text-light" href="contact.html">Contact</a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-primary  navbar-fixed-top w-75 ms-5 ps-5" id="navleft">
+        <div class="container-fluid">
+          <a class="navbar-brand text-light" href="#"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>   
+          <div class="collapse navbar-collapse justify-content-center ml-auto" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link text-light ms-5" href="index.html">Department</a>
+              <a class="nav-link text-light ms-5 me-5" href="index.html">Services</a>
+              <a class="nav-link text-light ms-5 me-5" href="about.html">About</a>
+              <a class="nav-link text-light ms-5  me-5" href="contact.html">Contact</a>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </nav>
+      </nav>    
   </section>
   <!--  ENDING NAVBAR PART -->
 
@@ -176,7 +200,7 @@
                         <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology  and equipment to ensure comfort and satisfaction during your treatment.</p>
                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                   </div>
-            </div>
+                </div>
               </div>
           </div>
           <div class="carousel-item">
