--- a/contact.html
+++ b/contact.html
@@ -71,9 +71,9 @@
           <div class="container"> 
               <div class="row"> 
                       <div class="col-6 aboutuscontent">
-                           <!-- <img src="assets/img/about.png" alt=""> -->
-                           <h1>About Us</h1>
-                           <h2>Improving lives by Couples Therapy</h2>
+                          <!-- <img src="assets/img/about.png" alt=""> -->
+                          <h1> Contact  Us</h1>
+                          <h2> Improving lives by Couples Therapy </h2>
                       </div>
               </div>
           </div>
@@ -89,14 +89,18 @@
 <section class="ourstory mb-5"> 
   <div class="card" style="width: 60rem;">
     <div class="card-body">
-      <h1  class="p-5 text-center">Our Story</h1>
-      <p   class="ps-5 pe-5">As a leading cosmetic gynecology hospital in kakinada, we offer a range of   state-of-the-art treatments to make you look and feel Your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </p>
+       <div class="container">
+        <div class="row">
+          <div class="col-6">
+             <img src="assets/img/about.png" alt="" height="200" width="300">
+          </div>
+          <div class="col-6">
+             <h1></h1>
+            
+          </div>
+        </div>
+       </div>
 
-      <p  class="ps-5 pe-5">Our commitment to excellence and patient satisfaction has earned us a reputation as the benchmark in intimate Wellness and  aesthetic treatments.</p>
-
-      <p  class="ps-5 pe-5 pb-5">Don't compromise on Your well-being. Trust the best Aesthetic Gynecology 
-      Hospital in Kakinada - Aruna Hospital Couples Clinic. Arrange a consultation with our experts today and take the first step towards more self-confidence.
-      </p>
     </div>
   </div>
 </section>
