adding images in contact page

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
             </div>
             <div class="col-3 ps-5  mt-2 navbarappoinment"> 
                 <li class="nav-item ps-5">
-                    <a class="nav-link" href="#"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
+                    <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
                 </li>
             </div>
           </div>
@@ -86,71 +86,74 @@
 
 <!--    OUR STORY  -->
 
-<section class="ourstory mb-5"> 
-  <div class="card" style="width: 60rem;">
-    <div class="card-body">
-      <h1  class="p-5 text-center">Our Story</h1>
-      <p   class="ps-5 pe-5">As a leading cosmetic gynecology hospital in kakinada, we offer a range of   state-of-the-art treatments to make you look and feel Your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </p>
+<section class="ourstory mb-5">
+    <div class="container"> 
+        <div class="card" style="width: 60rem;">
+            <div class="card-body  container">
+                  <h1  class="p-5 text-center">Our Story</h1>
+                  <p   class="ps-5 pe-5">As a leading cosmetic gynecology hospital in kakinada, we offer a range of   state-of-the-art treatments to make you look and feel Your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </p>
 
-      <p  class="ps-5 pe-5">Our commitment to excellence and patient satisfaction has earned us a reputation as the benchmark in intimate Wellness and  aesthetic treatments.</p>
+                  <p  class="ps-5 pe-5">Our commitment to excellence and patient satisfaction has earned us a reputation as the benchmark in intimate Wellness and  aesthetic treatments.</p>
 
-      <p  class="ps-5 pe-5 pb-5">Don't compromise on Your well-being. Trust the best Aesthetic Gynecology 
-      Hospital in Kakinada - Aruna Hospital Couples Clinic. Arrange a consultation with our experts today and take the first step towards more self-confidence.
-      </p>
-    </div>
-  </div>
+                  <p  class="ps-5 pe-5 pb-5">Don't compromise on Your well-being. Trust the best Aesthetic Gynecology 
+                  Hospital in Kakinada - Aruna Hospital Couples Clinic. Arrange a consultation with our experts today and take the first step towards more self-confidence.
+                  </p>
+            </div>
+        </div>
+    </div> 
 </section>
 
 <!--  ENDING OUR STORY -->
 
-
 <!--  FOOTER -->
-<section  class="mt-5">
-    <div class="container-fluid" id="footer">
-      <div class="container">
-          <div class="row">
-           <!--  FIRSTBLOCK -->
-            <div class="col-5 footer">
-                <img src="assets/img/Group 5 (1).png" alt="">
-                <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
-                <div class="row"> 
-                  <div class="col-1">
-                    <i class="bi bi-facebook"></i>
-                  </div>
-                  <div class="col-1">
-                    <i class="bi bi-youtube"></i>
-                  </div>
-                  <div class="col-1">
-                    <i class="bi bi-instagram"></i>
-                  </div>
+<section>
+  <div class="container-fluid" id="footer">
+    <div class="container">
+        <div class="row">
+         <!--  FIRSTBLOCK -->
+          <div class="col-lg-5  col-sm-6 footer">
+              <img src="assets/img/Group 5 (1).png" alt="">
+              <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
+              <div class="row"> 
+                <div class="col-1">
+                  <i class="bi bi-facebook"></i>
                 </div>
-            </div>
-            <!--  FIRST BLOCK -->
-            <div class="col-2 footerfirstblock">
-                <h5 class="pb-3">QUICK LINKS</h5>
-                <h6>Home</h6>
-                <h6>Department</h6>
-                <h6>About</h6>
-                <h6>Contanct</h6>
-            </div>
-            <!--  SECOND BLOCK -->
-            <div class="col-3 footersecondblock">
-              <h5 class="pb-3">HEAD OFFICE</h5>
-              <h6>98 West 21th </h6>
-              <h6>street,Kakinada</h6>
-            </div>
-            <!--  THIRD BLOCK -->
-            <div class="col-2 footerthirdblock">
-              <h5 class="pb-3">OPEN</h5>
-              <h6>Mon-Fri 8AM-8PM</h6>
-              <h6>Sat 8AM-8PM</h6>
-              <h6>Sun 8AM-8PM</h6>
-            </div>
-        </div>
+                <div class="col-1">
+                  <i class="bi bi-youtube"></i>
+                </div>
+                <div class="col-1">
+                  <i class="bi bi-instagram"></i>
+                </div>
+              </div>
+          </div>
+          <!--  FIRST BLOCK -->
+          <div class="col-lg-2  col-sm-6 footerfirstblock">
+              <h5 class="pb-3">QUICK LINKS</h5>
+              <h6><a href="index.html">Home</a></h6>
+              <h6><a href="index.html">Department</a></h6>
+              <h6><a href="about.html">About</a></h6>
+              <h6><a href="contact.html">Contanct</a></h6>
+          </div>
+          <!--  SECOND BLOCK -->
+          <div class="col-lg-3  col-sm-6  footersecondblock">
+            <h5 class="pb-3">ADDRESS</h5>
+            <h6>D.No 8-19-14/5,</h6>
+            <h6>Gandhi Nagar, Ontimamidi Jn.,</h6>
+            <h6>Chagantivari Street, KAKINADA-5333004</h6>
+          </div>
+          <!--  THIRD BLOCK -->
+          <div class="col-lg-2  col-sm-6  footerthirdblock">
+            <h5 class="pb-3">OPEN</h5>
+            <h6>Mon-Fri 8AM-8PM</h6>
+            <h6>Sat 8AM-8PM</h6>
+            <h6>Sun 8AM-8PM</h6>
+          </div>
       </div>
     </div>
-  </section>
-  <!--  ENDING  FOOTER -->
+  </div>
+</section>
+<!--  ENDING  FOOTER -->
+
 
 </body>
 </html>
