--- a/appoinment.html
+++ b/appoinment.html
@@ -26,9 +26,9 @@
     <!-- MAIN SECTION -->
 
     <section>
-        <div class="container">
+        <div class="container mainsection">
             <div class="row"> 
-                <div class="col-6 mt-5 ps-5">
+                <div class="col-6 mt-5 ps-5 mainsectionimage">
                      <img src="assets/img/appoinment.png" alt="" height="auto" width="auto">
                 </div>
                 <div class="col-6">
@@ -48,10 +48,14 @@
                         <br>
                         <input type="text" placeholder="Appoinment Date" required>
                         <br>
-                        <input type="text" placeholder="write Your Message" required>
+                        <div class="writeyourmessage"> 
+                        <input type="text"  placeholder="write Your Message"
+                         style="height: 100px;"
+                        required>    
+                        </div>
                         <br>
                         <!-- <input type="submit"  id="submit" value="SUBMIT FORM"> -->
-                        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+                        <button type="button" class="btn btn-primary btn-lg btn-block">SUBMIT</button>
                     </form>
                 </div>
             </div>
