--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </div>
               <div class="col-3 ms-5  mt-2 navbarappoinment"> 
                   <li class="nav-item ps-5">
-                      <a class="nav-link" href="#"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
+                      <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
                   </li>
               </div>
             </div>
@@ -79,20 +79,20 @@
   <section class="md-5 d-flex"> 
     <div class="container">
        <div class="row"> 
-         <div class="col-1">
-            <div class="col-3 mt-5"> 
+         <div class="col-1 ">
+            <div class="col-lg-3 mt-5"> 
             <img src="assets/img/facebook.png" alt="">
             </div>
-            <div class="col-3 mt-5"> 
+            <div class="col-lg-3 mt-5"> 
             <img src="assets/img/linked.png" alt="">
             </div>
-            <div class="col-3  mt-5"> 
+            <div class="col-lg-3  mt-5"> 
             <img src="assets/img/twitter.png" alt="">
             </div>
-            <div class="col-3  mt-5"> 
+            <div class="col-lg-3  mt-5"> 
               <img src="assets/img/pinterest.png" alt="">
             </div>
-            <div class="col-3  mt-5"> 
+            <div class="col-lg-3  mt-5"> 
             <img src="assets/img/gmail.png" alt="">
             </div> 
          </div>
@@ -130,12 +130,13 @@
             <span class="navbar-toggler-icon"></span>
           </button>   
           <div class="collapse navbar-collapse justify-content-center ml-auto" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav navbarsearchimage">
               <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
               <a class="nav-link text-light ms-5" href="index.html">Department</a>
               <a class="nav-link text-light ms-5 me-5" href="index.html">Services</a>
               <a class="nav-link text-light ms-5 me-5" href="about.html">About</a>
               <a class="nav-link text-light ms-5  me-5" href="contact.html">Contact</a>
+              <a class="nav-link text-light ms-5  me-5" href="#"><img src="assets/img/search.png" alt=""></a>
             </div>
           </div>
         </div>
@@ -156,7 +157,8 @@
                     <h6 class="pe-5">Your search ends with Aurna Hospital Couples Clinic. Our goal is to increase your self-confidence and well-being through our specialized cosmetic gynecology services.</h6>
                     <br>
                     <br>
-                    <button type="button" class="btn btn-primary">APPOINTMENT</button>
+                    <!-- <button type="button" class="btn btn-primary">APPOINTMENT</button> -->
+                    <a href="appoinment.html" class="btn btn-primary">APPOINTMENT</a>
                 </div>
             </div>
         </div>
@@ -382,9 +384,9 @@
                           <div class="col-lg-4 col-sm-6 col-md-6">
                                <img src="assets/img/doctor1.png" alt="doctorimage1">
                           </div>
-                          <div class="col-lg-4 col-sm-6 col-md-6">
+                          <!-- <div class="col-lg-4 col-sm-6 col-md-6">
                                <img src="assets/img/doctor2.png" alt="doctorimage2">
-                          </div>
+                          </div> -->
                           <div class="col-lg-4 col-sm-6 col-md-6">
                                <img src="assets/img/doctor3.png" alt="doctorimage3">
                           </div>
@@ -397,7 +399,7 @@
 
   <!--  FOUNDERS -->
   <section>
-    <div class="container founders p-3 mb-5 rounded">
+    <div class="container founders p-5 mb-5 rounded">
         <div class="row"> 
             <!--  FOUNDERS FIRST PART -->
             <div class="col-lg-3  col-sm-6 col-md-6 row">
@@ -467,17 +469,18 @@
             </div>
             <!--  FIRST BLOCK -->
             <div class="col-lg-2  col-sm-6 footerfirstblock">
-                <h5 class="pb-3">QUICK LINKS</h5>
-                <h6>Home</h6>
-                <h6>Department</h6>
-                <h6>About</h6>
-                <h6>Contanct</h6>
+              <h5 class="pb-3">QUICK LINKS</h5>
+              <h6><a href="index.html">Home</a></h6>
+              <h6><a href="index.html">Department</a></h6>
+              <h6><a href="about.html">About</a></h6>
+              <h6><a href="contact.html">Contanct</a></h6>
             </div>
             <!--  SECOND BLOCK -->
             <div class="col-lg-3  col-sm-6  footersecondblock">
-              <h5 class="pb-3">HEAD OFFICE</h5>
-              <h6>98 West 21th </h6>
-              <h6>street,Kakinada</h6>
+              <h5 class="pb-3">ADDRESS</h5>
+              <h6>D.No 8-19-14/5,</h6>
+              <h6>Gandhi Nagar, Ontimamidi Jn.,</h6>
+              <h6>Chagantivari Street, KAKINADA-5333004</h6>
             </div>
             <!--  THIRD BLOCK -->
             <div class="col-lg-2  col-sm-6  footerthirdblock">
