--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             </div>
             <div class="col-3 ps-5  mt-2 navbarappoinment"> 
                 <li class="nav-item ps-5">
-                    <a class="nav-link" href="#"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
+                    <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
                 </li>
             </div>
           </div>
@@ -64,13 +64,13 @@
 
 <!-- Ending  Header -->
 
-<!--  ABOUT US  -->
+<!--  CONTACT US  -->
 
   <section class="md-5"> 
-      <div class="container-fluid aboutus">
+      <div class="container-fluid  contactus">
           <div class="container"> 
               <div class="row"> 
-                      <div class="col-6 aboutuscontent">
+                      <div class="col-6 contactuscontent">
                           <!-- <img src="assets/img/about.png" alt=""> -->
                           <h1> Contact  Us</h1>
                           <h2> Improving lives by Couples Therapy </h2>
@@ -91,13 +91,26 @@
     <div class="card-body">
        <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-6 mt-5 pt-5 ps-5">
              <img src="assets/img/about.png" alt="" height="200" width="300">
           </div>
           <div class="col-6">
-             <h1></h1>
-            
-          </div>
+            <h1 class="mt-5">Get In touch</h1>
+            <br>
+            <form id="appoinmentfrom">
+                <input type="text" placeholder="Your Name" required>
+                <br>
+                <input type="text" placeholder="Your Email" required>
+                <br>
+                <input type="text" placeholder="Appoinment Date" required>
+                <br>
+                <input type="text" placeholder="write Your Message"
+                style="height: 100px;" required>
+                <br>
+                <!-- <input type="submit"  id="submit" value="SUBMIT FORM"> -->
+                <button type="button" class="btn btn-primary btn-lg btn-block">SUBMIT</button>
+            </form>
+        </div>
         </div>
        </div>
 
@@ -109,52 +122,52 @@
 
 
 <!--  FOOTER -->
-<section  class="mt-5">
-    <div class="container-fluid" id="footer">
-      <div class="container">
-          <div class="row">
-           <!--  FIRSTBLOCK -->
-            <div class="col-5 footer">
-                <img src="assets/img/Group 5 (1).png" alt="">
-                <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
-                <div class="row"> 
-                  <div class="col-1">
-                    <i class="bi bi-facebook"></i>
-                  </div>
-                  <div class="col-1">
-                    <i class="bi bi-youtube"></i>
-                  </div>
-                  <div class="col-1">
-                    <i class="bi bi-instagram"></i>
-                  </div>
+<section>
+  <div class="container-fluid" id="footer">
+    <div class="container">
+        <div class="row">
+         <!--  FIRSTBLOCK -->
+          <div class="col-lg-5  col-sm-6 footer">
+              <img src="assets/img/Group 5 (1).png" alt="">
+              <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
+              <div class="row"> 
+                <div class="col-1">
+                  <i class="bi bi-facebook"></i>
                 </div>
-            </div>
-            <!--  FIRST BLOCK -->
-            <div class="col-2 footerfirstblock">
-                <h5 class="pb-3">QUICK LINKS</h5>
-                <h6>Home</h6>
-                <h6>Department</h6>
-                <h6>About</h6>
-                <h6>Contanct</h6>
-            </div>
-            <!--  SECOND BLOCK -->
-            <div class="col-3 footersecondblock">
-              <h5 class="pb-3">HEAD OFFICE</h5>
-              <h6>98 West 21th </h6>
-              <h6>street,Kakinada</h6>
-            </div>
-            <!--  THIRD BLOCK -->
-            <div class="col-2 footerthirdblock">
-              <h5 class="pb-3">OPEN</h5>
-              <h6>Mon-Fri 8AM-8PM</h6>
-              <h6>Sat 8AM-8PM</h6>
-              <h6>Sun 8AM-8PM</h6>
-            </div>
-        </div>
+                <div class="col-1">
+                  <i class="bi bi-youtube"></i>
+                </div>
+                <div class="col-1">
+                  <i class="bi bi-instagram"></i>
+                </div>
+              </div>
+          </div>
+          <!--  FIRST BLOCK -->
+          <div class="col-lg-2  col-sm-6 footerfirstblock">
+            <h5 class="pb-3">QUICK LINKS</h5>
+            <h6><a href="index.html">Home</a></h6>
+            <h6><a href="index.html">Department</a></h6>
+            <h6><a href="about.html">About</a></h6>
+            <h6><a href="contact.html">Contanct</a></h6>
+          </div>
+          <!--  SECOND BLOCK -->
+          <div class="col-lg-3  col-sm-6  footersecondblock">
+            <h5 class="pb-3">HEAD OFFICE</h5>
+            <h6>98 West 21th </h6>
+            <h6>street,Kakinada</h6>
+          </div>
+          <!--  THIRD BLOCK -->
+          <div class="col-lg-2  col-sm-6  footerthirdblock">
+            <h5 class="pb-3">OPEN</h5>
+            <h6>Mon-Fri 8AM-8PM</h6>
+            <h6>Sat 8AM-8PM</h6>
+            <h6>Sun 8AM-8PM</h6>
+          </div>
       </div>
     </div>
-  </section>
-  <!--  ENDING  FOOTER -->
+  </div>
+</section>
+<!--  ENDING  FOOTER -->
 
 </body>
 </html>
