--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                                 <br>
                                 <button type="button" class="btn btn-outline-primary">Learn more</button>
                             </div>
-                            <div class="col-lg-6 col-sm-6 col-md-12">
-                                <img src="assets/img/image1.png" alt="" height="auto" width="auto">
+                            <div class="col-lg-6 col-sm-6 col-md-12 ">
+                                <img src="assets/img/image1.png" alt="" height="auto" class="img-fluid" width="auto">
                             </div>
                     </div>
               </div>
@@ -149,7 +149,7 @@
         <div class="container areyoulooking">
             <div class="row">
                 <div class="col-lg-6 col-sm-12 col-md-12">
-                    <img src="assets/img/image2.png" alt="">
+                    <img src="assets/img/image2.png"  class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 col-sm-12 col-md-12">
                     <h1 class="mb-3">Are you looking for the <br>
@@ -177,7 +177,7 @@
                   <!--  FIRST CARD -->
                   <div class="card" style="width: 18rem;">
                       <div class="card-body ourservicesfirstcard">
-                          <img src="assets/img/card1.png" alt="">
+                          <img src="assets/img/card1.png"  class="img-fluid" alt="">
                           <h5 class="card-title">Aesthetic Gynecology</h5>
                           <p class="card-text pb-2">Our clinic specializes in aesthetic gynecology treatments to improve intimate Well-being. Whether you Want Vaginal rejuvenation, labiaplasty, or anthoer cosmetic procedure, our experts  are here to help.</p>
                           <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
@@ -333,7 +333,7 @@
                     <a href="#" class="btn btn-primary">learn more</a>
                 </div>
                 <div class="col-lg-6 col-sm-12 col-md-12">
-                    <img src="assets/img/image3.png" alt="">
+                    <img src="assets/img/image3.png"  class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -382,13 +382,13 @@
                       </div>
                       <div class="col-lg-6 col-sm-12 col-md-12 row ">
                           <div class="col-lg-4 col-sm-6 col-md-6">
-                               <img src="assets/img/doctor1.png" alt="doctorimage1">
+                               <img src="assets/img/doctor1.png"  class="img-fluid" alt="doctorimage1">
                           </div>
                           <!-- <div class="col-lg-4 col-sm-6 col-md-6">
                                <img src="assets/img/doctor2.png" alt="doctorimage2">
                           </div> -->
                           <div class="col-lg-4 col-sm-6 col-md-6">
-                               <img src="assets/img/doctor3.png" alt="doctorimage3">
+                               <img src="assets/img/doctor3.png"  class="img-fluid" alt="doctorimage3">
                           </div>
                       </div>
                 </div>
